# datagears

./: .env-example  .gitignore  Cargo.toml  LICENSE.txt  Makefile  NOTES.md  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.cargo/: config.toml
.github/workflows/: testrunner.yml
benches/: bench_sync_pymodel.rs
datagears/: __init__.py
datagears/commons/protos/: datagears.proto  datagears_pb2.py  datagears_pb2_grpc.py
datagears/core/: analysis.py  api.py  engine.py  network.py  nodes.py  package.py  plot.py  sampler.py  stores.py
datagears/distributed/: server.py
datagears/engine/: api.py  engine.py  network.py  plot.py
docs/: conf.py
fixtures/: pymodel.py
gears/: pymodel.py
scripts/: scipy-install.sh
services/: docker-compose.yml
src/: communications.rs  config.rs  core.rs  datagears.rs  errors.rs  gear.rs  gears.rs  lib.rs  macros.rs  models.rs  services.rs
test/: test_engine.py
tests/core/: __init__.py  test_analysis.py  test_api.py  test_datagears.py  test_engine.py  test_network.py  test_nodes.py  test_package.py  test_sampler.py  test_stores.py
tests/core/fixtures/: engine.py  features.py  package.py
