[package]
name = "datagears"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0"
tract-core = "0.17.2"
tract-onnx = "0.17.2"
smallvec = "1.4"
futures-util = "0.3"
async-trait = "0.1"

[dependencies.pyo3]
version = "0.16.5"

[dev-dependencies]
tokio = "1.20.0"
criterion = { version = "0.3", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "bench_sync_pymodel"
harness = false


# [profile.bench]
# opt-level = 3
# debug = false
# rpath = false
# lto = false
# debug-assertions = false
# codegen-units = 1
