[tool.poetry]
name = "datagears"
version = "0.1.0"
description = ""
authors = ["sam <contact@justsam.io>"]

[tool.poetry.dependencies]
python = "3.10.3"
requests = "2.28.1"
scikit-learn = "1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
